--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
-   "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "node",
@@ -15,8 +15,14 @@
   "license": "ISC",
   "dependencies": {
     "auth0-api-jwt-rsa-validation": "0.0.1",
+    "body-parser": "^1.18.2",
     "express": "^4.16.1",
-    "express-jwt": "^5.3.0"
+    "express-jwt": "^5.3.0",
+    "mongodb": "^2.2.33",
+    "monk": "^6.0.5"
+  },
+  "devDependencies": {
+    "debug": "^3.1.0",
+    "morgan": "^1.9.0"
   }
-
 }
