--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "auth0-api-jwt-rsa-validation": "0.0.1",
     "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "express": "^4.16.1",
     "express-jwt": "^5.3.0",
     "mongodb": "^2.2.33",
